nginx-jenks/jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: regv2.bubliks.net/jenk2ansi2python

        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 50000
        volumeMounts:
          - name: jenkins-vol
            mountPath: /var/jenkins_home
      dnsPolicy: "None"
      dnsConfig:
         nameservers:
           - 8.8.8.8
         searches:
           - google.com      




      volumes:
       - name: jenkins-vol
         persistentVolumeClaim:
           claimName: jenk-pvc

      imagePullSecrets:  
         - name: regcred
      nodeSelector:     
         super: kolobok
      tolerations:
              - key: node-role.kubernetes.io/master
                effect: NoSchedule  
         

---

apiVersion: v1
kind: Service
metadata:
  name: jenksvc
  namespace: apps
spec:
  type: LoadBalancer
  selector:
    app: jenkins
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 32501
  externalIPs:
     - 10.1.1.1


---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  namespace: apps
spec:
  type: LoadBalancer
  ports:
    - port: 50000
      targetPort: 50000
  selector:
    app: jenkins       
  externalIPs:  
   - 10.1.1.1
