nginx-jenks/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-master
  labels:
    app: nginx-app-m2
  namespace: apps

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app-m2
  template:
    metadata:
      labels:
        app: nginx-app-m2



    spec:
      containers:
      - name: nginxmaster2
        image: nginx:latest
        resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "1Gi"
              cpu: "600m"
        volumeMounts:
               - mountPath: /etc/nginx/nginx.conf
                 name: nginxconf

               - mountPath: /etc/nginx/conf.d/bublik.conf
                 name: bublikconf

               - mountPath: /etc/nginx/snippets/ssl-params.conf
                 name: sslparams

               - mountPath: /etc/nginx/snippets/self-signed.conf
                 name: self 

               - mountPath: /usr/share/nginx/html1
                 name: html1

               - mountPath: /etc/nginx/dhparam.pem
                 name: dhparam

               - mountPath: /etc/nginx/ssl/ssl.crt
                 name: ssl2crt

               - mountPath: /etc/nginx/ssl/ssl.key
                 name: ssl2key
        

        ports:
        - containerPort: 80
        - containerPort: 443

      volumes:
      - name: nginxconf
        hostPath:
          path: /home/devops/DEVOPS/DEVOPS-KUBE-MASTER/nginx-jenks/nginx.conf
          type: FileOrCreate


      - name: html1
        hostPath:
          path: /home/devops/DEVOPS/DEVOPS-KUBE-MASTER/nginx-jenks/html1
          type: DirectoryOrCreate

      - name: bublikconf
        hostPath:
          path: /home/devops/DEVOPS/DEVOPS-KUBE-MASTER/nginx-jenks/bublik.conf
          type: FileOrCreate

      - name: self
        hostPath:
          path: /home/devops/DEVOPS/DEVOPS-KUBE-MASTER/nginx-worker/selfsigned.conf
          type: FileOrCreate

      - name: sslparams
        hostPath:
          path: /home/devops/DEVOPS/DEVOPS-KUBE-MASTER/nginx-worker/ssl-params.conf
          type: FileOrCreate


      - name: ssl2key
        hostPath:
          path: /home/devops/DEVOPS/DEVOPS-KUBE-MASTER/ssl/ssl.key
          type: FileOrCreate

      - name: ssl2crt
        hostPath:
          path: /home/devops/DEVOPS/DEVOPS-KUBE-MASTER/ssl/ssl.crt


      - name: dhparam
        hostPath:
          path: /home/devops/DEVOPS/DEVOPS-KUBE-MASTER/ssl/dhparam.pem
          type: FileOrCreate

      nodeSelector:   
              bublik: studios
      tolerations:
              - key: node-role.kubernetes.io/master
                effect: NoSchedule  
      
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 172.16.1.1
          - 8.8.8.8
        searches:
          - bubliks.net
        options:
          - name: ndots
            value: "2"
          - name: edns0

---

apiVersion: v1
kind: Service
metadata:
  name: nginxexpose-m2
  namespace: apps
spec:
  type: LoadBalancer
  selector:
     app: nginx-app-m2

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80


    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  externalIPs:
   - 172.16.1.1
