nginx-jenks/ingress.yml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nginx-ingress2
  namespace: apps2
  annotations:
    kubernetes.io/ingress.class: class2
spec:
  tls:
  - hosts:
     - nexus.bubliks.net 
     - prom.bubliks.net
     - graf.bubliks.net
    secretName: bublik-tls2 
  rules:
  - host: "nexus.bubliks.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: nexus-service
            port:
              number: 8081
